--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,9 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help") %>
+<h1>Help</h1>
+<p>
+  Получить помощь по Ruby on Rails Tutorial на странице
+  <a href="http://www.railstutorial.org/#help">Rails Tutorial раздел Help</a>.
+  Чтобы получить помощь по данному примеру, см.
+  <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
+  книга</a>.
+</p>
