--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, "Home") %>
+
 <h1>Sample App</h1>
 <p>
-  Это домашняя страница
+  This is the home page for the
   <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-  Sample application.
+  sample application.
 </p>
